{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 151,
  "lineage": "128d1879-9a7b-05c7-93aa-913122e3a82b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/kartaca-416714/zones/europe-west1-d/instanceGroups/my-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2024-03-10T06:40:29.830-07:00",
            "enable_cdn": false,
            "fingerprint": "Q5PK2tMQ1Ac=",
            "generated_id": 3732525388811732642,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/kartaca-416714/global/healthChecks/http-basic-check"
            ],
            "id": "projects/kartaca-416714/global/backendServices/web-backend-service",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "web-backend-service",
            "port_name": "http",
            "project": "kartaca-416714",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kartaca-416714/global/backendServices/web-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.my_instance_group",
            "google_compute_instance_template.instance_template",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-03-10T05:49:02.133-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kartaca-416714/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/kartaca-416714/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "kartaca-416714",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kartaca-416714/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.110.217.137",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-03-10T06:39:52.213-07:00",
            "id": "projects/kartaca-416714/global/addresses/lb-ipv4-1",
            "name": "lb-ipv4-1",
            "prefix_length": 0,
            "project": "kartaca-416714",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kartaca-416714/global/addresses/lb-ipv4-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.120.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2024-03-10T04:48:27.328-07:00",
            "id": "projects/kartaca-416714/global/addresses/private-ip-address",
            "name": "private-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/kartaca-416714/global/networks/my-vpc-network",
            "prefix_length": 16,
            "project": "kartaca-416714",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kartaca-416714/global/addresses/private-ip-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/kartaca-416714/global/forwardingRules/http-content-rule",
            "ip_address": "34.110.217.137",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "http-content-rule",
            "port_range": "80-80",
            "project": "kartaca-416714",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kartaca-416714/global/forwardingRules/http-content-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/kartaca-416714/global/targetHttpProxies/http-lb-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_global_address.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.my_instance_group",
            "google_compute_instance_template.instance_template",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "peering_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/kartaca-416714/global/networks/private-network",
            "mtu": 0,
            "name": "private-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8671874389236516551",
            "project": "kartaca-416714",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kartaca-416714/global/networks/private-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/kartaca-416714/global/networks/my-vpc-network",
            "mtu": 0,
            "name": "my-vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "396283329734886730",
            "project": "kartaca-416714",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kartaca-416714/global/networks/my-vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-09T07:09:39.788-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/kartaca-416714/regions/europe-west1/routers/my-router",
            "name": "my-router",
            "network": "https://www.googleapis.com/compute/v1/projects/kartaca-416714/global/networks/my-vpc-network",
            "project": "kartaca-416714",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kartaca-416714/regions/europe-west1/routers/my-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "kartaca-416714/europe-west1/my-router/my-nat-gateway",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-nat-gateway",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "kartaca-416714",
            "router": "my-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-09T07:09:40.002-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/kartaca-416714/regions/europe-west1/subnetworks/my-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "my-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/kartaca-416714/global/networks/my-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "kartaca-416714",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kartaca-416714/regions/europe-west1/subnetworks/my-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-10T06:41:25.530-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/kartaca-416714/global/targetHttpProxies/http-lb-proxy",
            "name": "http-lb-proxy",
            "project": "kartaca-416714",
            "proxy_bind": false,
            "proxy_id": 5138845402627311210,
            "self_link": "https://www.googleapis.com/compute/v1/projects/kartaca-416714/global/targetHttpProxies/http-lb-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/kartaca-416714/global/urlMaps/web-map-http"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.my_instance_group",
            "google_compute_instance_template.instance_template",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-10T06:41:13.640-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/kartaca-416714/global/backendServices/web-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "S-qOjcGFGn4=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/kartaca-416714/global/urlMaps/web-map-http",
            "map_id": 3994233538751760022,
            "name": "web-map-http",
            "path_matcher": [],
            "project": "kartaca-416714",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kartaca-416714/global/urlMaps/web-map-http",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.my_instance_group",
            "google_compute_instance_template.instance_template",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    }
  ]
}